wrap synch with index.js to return non-promisified printer and optinoal param boolean print to determine which printer to use (accumulate or split printer)

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dwytpl",
   "version": "1.1.0",
   "description": "download youtube playlists",
-  "main": "run.js",
+  "main": "src/index",
   "scripts": {
     "test": "node test/run"
   },
