--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "src/index",
   "scripts": {
     "test": "node test/run",
-    "test-tracker": "node test/tracker",
-    "test-playlist": "node test/playlist",
-    "test-download": "node test/downloadTest"
+    "test-tracker": "node test/trackerTest",
+    "test-playlist": "node test/playlistTest",
+    "test-download": "node test/downloadTest",
+    "test-search": "node test/searchTest"
   },
   "keywords": [],
   "author": "mahhov",
